cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_77.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:76: error: DEAD_STORE
  The value written to &v0 (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:76:5: Write of unused value
74.           }
75.       }
76.       v0 = v1 = ti[0] = ti[1] = c = cc = 0;
          ^
77.       *num = n;
78.   }
